changed picture size

--- a/patsapp/templates/index.html
+++ b/patsapp/templates/index.html
@@ -11,8 +11,8 @@
 <h1> This is my homepage</h1>
 <a href="{% url 'my_about' %}">about</a>
 <!-- adding an image using django -->
-<img src="{% static 'images/lc.webp' %}" alt="">
-<img src="{% static 'images/ps1.jpg'%}" alt="">
+<img src="{% static 'images/lc.webp' %}" alt="" width="500" height="300">
+<img src="{% static 'images/ps1.jpg'%}" alt="" width="500" height="300">
 
 
 </body>
